# notepad-translate-server

./: .gitignore
server/: .env.example  Cargo.toml
server/src/: main.rs
server/src/locales/: mod.rs  ru.rs
server/src/prelude/: constants.rs  mod.rs
server/src/routes/: stat.rs
