[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.14"
env_logger = "0.10.0"
log = { version = "0.4.17", features = ["max_level_debug", "release_max_level_warn"] }
serde = { version = "1.0.160", features = [ "derive" ] }
tokio = { version = "1.27.0", features = ["full"] }
