[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.14"
dotenvy = "0.15.7"
env_logger = "0.10.0"
log = { version = "0.4.17", features = ["max_level_debug", "release_max_level_warn"] }
once_cell = "1.17.1"
serde = { version = "1.0.160", features = [ "derive" ] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
url = "2.3.1"
